--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "build:umd": "webpack --output-filename index.umd.js",
     "build:umd.min": "webpack -p --output-filename index.umd.min.js",
     "lint": "eslint ./src",
+    "flow": "flow",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
@@ -35,17 +36,22 @@
     "babel-core": "^6.24.1",
     "babel-jest": "^20.0.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "codecov": "^2.2.0",
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.0.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard-flow": "^1.0.1",
+    "eslint-plugin-flowtype": "^2.33.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "flow-bin": "^0.46.0",
     "husky": "^0.13.3",
     "jest": "^19.0.2",
     "npm-run-all": "^4.0.2",
